Added: extra logs and filled out some details from older ones

--- a/old-data/20230626/README
+++ b/old-data/20230626/README
@@ -1,1 +1,7 @@
- 
+- His phone ran out of batteries so no photos
+- No drip on X at all. He checked and it's completely dry
+
+
+B - AWTB
+C - AJBL
+D - AVJW
