--- a/old-data/20230720/README
+++ b/old-data/20230720/README
@@ -2,5 +2,10 @@
 
 Nong took all the machines out of the cave
 
-
 "water level is also coming up"
+
+B - ANVL
+C - AFBC
+D - ARHK
+X - ????
+N - AAWP
