--- a/old-data/20230802/README
+++ b/old-data/20230802/README
@@ -1,1 +1,10 @@
- 
+2023-08-02
+
+- Rain Gauge/Board 1, battery fell off
+
+A - AXWC ;; new bottle
+B - AMKJ ;; still only a bit of water
+C - AYER
+D - AYNM
+X - AGWM ;; finally water is back
+N - AFUP
