--- a/old-data/20230821/README
+++ b/old-data/20230821/README
@@ -1,6 +1,14 @@
 No water on B - which is strange
 
-
 "the clay that you put on is worn out but possition is still look good"
 
 "There are more water and higher humidity but every raingauge is still less water even it's already back to drip already"
+
+Bottom tube-cone fell off Gauge 5
+
+A - AERJ
+B - No water!
+C - ADBM
+D - ASWK
+N - AYFF ;; tube cone fell off
+X - AALY
